[package]
name = "obsess"
version = "0.1.0"
authors = ["Lakin Wecker <lakin@structuredabstraction.com>"]

[dependencies]
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }
diesel_codegen = { version = "0.16", features = ["postgres"] }
diesel = { version = "0.16", features = ["chrono", "postgres"] }
dotenv = "0.9"
lazy_static = "0.2"
r2d2 = "0.7"
r2d2-diesel = "0.16"
rocket = "0.3"
rocket_codegen = "0.3"
rocket_contrib = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

